# Sistema-De-Validacao-De-Embarque-Por-Reconhecimento-Facial

./: .gitignore  ARCHITETURE.md  README.md  README2.md  docker-compose.yml  infos.md
.github/workflows/: ci.yml
apps/admin-web/: .env.example  admin-web.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/admin-web/src/: App.tsx  main.tsx
apps/admin-web/src/app/: AppLayout.module.css  AppLayout.tsx  NotFoundPage.module.css  NotFoundPage.tsx  httpClient.ts
apps/admin-web/src/styles/: global.css  tokens.css
apps/admin-web/src/test/: setup.ts
apps/central-api/: .env.example  alembic.ini  central-api.md  entrypoint.sh  pyproject.toml
apps/central-api/app/: __init__.py  main.py
apps/central-api/app/core/: config.py  exceptions.py  logging.py  security.py
apps/central-api/app/database/: base.py  session.py
apps/central-api/app/modules/auth/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
apps/central-api/app/modules/biometrics/: model.py  repository.py  router.py  schema.py  service.py  vision_client.py
apps/central-api/app/modules/health/: __init__.py  router.py
apps/central-api/app/modules/passengers/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
apps/central-api/app/modules/sync/: model.py  repository.py  router.py  schema.py  service.py
apps/central-api/app/modules/tickets/: model.py  repository.py  router.py  schema.py  service.py
apps/central-api/app/modules/validations/: model.py  repository.py  router.py  schema.py  service.py
apps/central-api/app/shared/: enums.py  pagination.py
apps/central-api/migrations/: env.py
apps/central-api/migrations/versions/: 20260617_0001_create_passengers.py  20260621_0002_enable_pgvector.py  20260621_0003_create_users.py  20260621_0004_create_face_embeddings.py  20260621_0005_create_tickets.py  20260621_0006_create_boarding_validations.py  20260621_0007_create_sync_device_state.py
apps/central-api/scripts/: seed_admin.py
apps/central-api/tests/: conftest.py  test_biometrics_service.py  test_passengers_service.py  test_security.py  test_sync_service.py  test_tickets_service.py  test_validations_service.py
apps/edge-api/: .env.example  alembic.ini  edge-api.md  entrypoint.sh  pyproject.toml
apps/edge-api/app/: main.py
apps/edge-api/app/core/: config.py  connectivity.py  exceptions.py  logging.py
apps/edge-api/app/database/: base.py  session.py
apps/edge-api/app/modules/cache/: matching.py  model.py  repository.py  vision_client.py
apps/edge-api/app/modules/health/: router.py  schema.py
apps/edge-api/app/modules/validation/: model.py  repository.py  router.py  schema.py  service.py
apps/edge-api/app/shared/: enums.py
apps/edge-api/migrations/: env.py  script.py.mako
apps/edge-api/migrations/versions/: 20260621_0001_create_local_passengers.py  20260621_0002_create_local_face_embeddings.py  20260621_0003_create_local_tickets.py  20260621_0004_create_local_validation_logs.py  20260621_0005_create_local_sync_state.py  20260622_0006_add_active_to_local_face_embeddings.py
apps/edge-api/tests/: conftest.py  test_cache_repository.py  test_connectivity.py  test_matching.py  test_router.py  test_validation_service.py
apps/operator-web/: .env.example  index.html  operator-web.md  package-lock.json  package.json  vite.config.ts
apps/operator-web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/operator-web/src/api/: httpClient.ts  syncApi.ts  validationApi.ts
apps/operator-web/src/styles/: global.css  tokens.css
apps/sync-worker/: .env.example  pyproject.toml  sync-worker.md
apps/sync-worker/app/: central_client.py  main.py  runner.py  schemas.py
apps/sync-worker/app/core/: config.py  exceptions.py  logging.py
apps/sync-worker/app/database/: base.py  session.py
apps/sync-worker/app/modules/cache/: model.py  repository.py
apps/sync-worker/app/modules/sync_state/: model.py  repository.py
apps/sync-worker/app/modules/validation/: model.py  repository.py
apps/sync-worker/app/shared/: enums.py
apps/sync-worker/tests/: conftest.py  test_cache_repository.py  test_central_client.py  test_runner.py  test_sync_state_repository.py  test_validation_repository.py
apps/vision-service/: .env.example  pyproject.toml  vision-service.md
apps/vision-service/app/: main.py
apps/vision-service/app/api/: router.py
apps/vision-service/app/core/: config.py
apps/vision-service/app/pipeline/: face_engine.py  liveness.py  quality.py  service.py
apps/vision-service/app/schemas/: embedding.py
apps/vision-service/tests/: conftest.py  test_liveness.py  test_quality.py  test_router.py  test_service.py
docs/: api.md  architecture.md  database.md  flows.md
infrastructure/docker/: admin-web.Dockerfile  central-api.Dockerfile  edge-api.Dockerfile  operator-web.Dockerfile  sync-worker.Dockerfile  vision-service.Dockerfile
infrastructure/monitoring/: prometheus.yml
(+125 files in other folders)
