[project]
name = "edge-api"
version = "0.1.0"
description = "Local API running on the bus: offline-first boarding validation against a cached passenger/embedding/ticket snapshot."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "numpy>=1.26,<3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.6",
    "mypy>=1.11.1",
    "aiosqlite>=0.20.0",
    "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/database/migrations/*", "app/database/session.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
