[project]
name = "sync-worker"
version = "0.1.0"
description = "Background worker syncing each bus's local cache with central-api: pulls passengers/embeddings/tickets, pushes pending boarding validation logs (RF10/RF11)."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.6",
    "mypy>=1.11.1",
    "aiosqlite>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
