[project]
name = "vision-service"
version = "0.1.0"
description = "Facial detection, quality, basic liveness and embedding generation service (SCRFD + ArcFace via insightface)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.9.0",
    "onnxruntime>=1.18.0",
    "insightface>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.6",
    "mypy>=1.11.1",
    "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/pipeline/face_engine.py"]  # depende de modelos ONNX baixados em runtime

[tool.coverage.report]
fail_under = 75
show_missing = true
